// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: > computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          573,
          161,
        ],
        [
          583,
          165,
        ],
        [
          573,
          168,
        ],
      ],
      "headArrowPoint": [
        587,
        165,
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 435,
        "y": 137,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            439,
            154,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          392,
          165,
        ],
        [
          451,
          165,
        ],
        [
          515,
          165,
        ],
        [
          574,
          165,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "tailArrow": [
        [
          392,
          165,
        ],
        [
          386,
          161,
        ],
        [
          380,
          165,
        ],
        [
          386,
          169,
        ],
      ],
      "tailArrowPoint": [
        378,
        165,
      ],
      "target": "amazon.s3",
    },
  ],
  "height": 305,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 289,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 410,
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "height": 289,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "AMAZON",
          "width": 58,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        546,
        8,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 410,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 186,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            128,
            99,
          ],
          "text": "Backend",
          "width": 78,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        47,
        72,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "height": 186,
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            154,
            88,
          ],
          "text": "S3",
          "width": 25,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            96,
            112,
          ],
          "text": "S3 is a storage service",
          "width": 142,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        585,
        72,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "S3",
      "width": 331,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 964,
}
`;

exports[`dotLayout: > computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          605,
          776,
        ],
        [
          615,
          779,
        ],
        [
          605,
          783,
        ],
      ],
      "headArrowPoint": [
        618,
        779,
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "points": [
        [
          418,
          779,
        ],
        [
          478,
          779,
        ],
        [
          545,
          779,
        ],
        [
          605,
          779,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          251,
          674,
        ],
        [
          248,
          684,
        ],
        [
          244,
          674,
        ],
      ],
      "headArrowPoint": [
        248,
        687,
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labelBBox": {
        "height": 37,
        "width": 200,
        "x": 249,
        "y": 574,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            253,
            591,
          ],
          "text": "fetches data in zero trust network",
          "width": 192,
        },
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            253,
            607,
          ],
          "text": "with sso authentification",
          "width": 139,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          239,
          520,
        ],
        [
          241,
          568,
        ],
        [
          245,
          625,
        ],
        [
          248,
          674,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          395,
          682,
        ],
        [
          385,
          685,
        ],
        [
          391,
          676,
        ],
      ],
      "headArrowPoint": [
        383,
        687,
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 21,
        "width": 79,
        "x": 522,
        "y": 582,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            526,
            599,
          ],
          "text": "fetches data",
          "width": 71,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          575,
          521,
        ],
        [
          544,
          552,
        ],
        [
          508,
          586,
        ],
        [
          473,
          615,
        ],
        [
          448,
          636,
        ],
        [
          420,
          658,
        ],
        [
          393,
          679,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          237,
          323,
        ],
        [
          233,
          333,
        ],
        [
          230,
          323,
        ],
      ],
      "headArrowPoint": [
        233,
        336,
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 239,
        "y": 239,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            243,
            256,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          233,
          186,
        ],
        [
          233,
          228,
        ],
        [
          233,
          279,
        ],
        [
          233,
          323,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          668,
          323,
        ],
        [
          664,
          333,
        ],
        [
          661,
          323,
        ],
      ],
      "headArrowPoint": [
        664,
        336,
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 670,
        "y": 239,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            674,
            256,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          664,
          186,
        ],
        [
          664,
          228,
        ],
        [
          664,
          279,
        ],
        [
          664,
          323,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          787,
          1025,
        ],
        [
          783,
          1035,
        ],
        [
          780,
          1025,
        ],
      ],
      "headArrowPoint": [
        783,
        1038,
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 789,
        "y": 958,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            793,
            975,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          783,
          887,
        ],
        [
          783,
          931,
        ],
        [
          783,
          982,
        ],
        [
          783,
          1026,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "tailArrow": [
        [
          783,
          886,
        ],
        [
          787,
          880,
        ],
        [
          783,
          874,
        ],
        [
          779,
          880,
        ],
      ],
      "tailArrowPoint": [
        783,
        872,
      ],
      "target": "amazon",
    },
  ],
  "height": 1223,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "height": 680,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        272,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 1020,
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 289,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "BACKEND",
          "width": 65,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        48,
        623,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 940,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "height": 186,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            112,
            80,
          ],
          "text": "Graphql API",
          "width": 109,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            42,
            104,
          ],
          "text": "Component that allows to query data via",
          "width": 250,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            136,
            121,
          ],
          "text": "GraphQL.",
          "width": 62,
        },
      ],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        87,
        686,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Graphql API",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "height": 186,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            90,
            80,
          ],
          "text": "Backend Storage",
          "width": 154,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            38,
            104,
          ],
          "text": "The backend storage is a component that",
          "width": 258,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            130,
            121,
          ],
          "text": "stores data.",
          "width": 74,
        },
      ],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        617,
        686,
      ],
      "shape": "storage",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "height": 186,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            70,
            80,
          ],
          "text": "Admin Panel Webapp",
          "width": 194,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            40,
            104,
          ],
          "text": "The admin panel is a webapp that allows",
          "width": 253,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            45,
            121,
          ],
          "text": "support staff to manage customer data.",
          "width": 244,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        67,
        335,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "height": 186,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            32,
            80,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 271,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            37,
            104,
          ],
          "text": "The customer dashboard is a webapp that",
          "width": 262,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            57,
            121,
          ],
          "text": "allows customers to view their data.",
          "width": 221,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        497,
        335,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
      "width": 333,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 186,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            89,
            80,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            49,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            100,
            121,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        67,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 186,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            125,
            100,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        498,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 186,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            130,
            88,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            82,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        617,
        1038,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 331,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1036,
}
`;

exports[`dotLayout: > computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          733,
          425,
        ],
        [
          743,
          428,
        ],
        [
          733,
          432,
        ],
      ],
      "headArrowPoint": [
        746,
        428,
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 21,
        "width": 28,
        "x": 635,
        "y": 399,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            639,
            416,
          ],
          "text": "[...]",
          "width": 20,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          545,
          428,
        ],
        [
          605,
          428,
        ],
        [
          672,
          428,
        ],
        [
          733,
          428,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          317,
          323,
        ],
        [
          320,
          333,
        ],
        [
          312,
          327,
        ],
      ],
      "headArrowPoint": [
        322,
        336,
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 279,
        "y": 239,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            283,
            256,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          225,
          186,
        ],
        [
          252,
          229,
        ],
        [
          286,
          281,
        ],
        [
          315,
          325,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          449,
          327,
        ],
        [
          441,
          333,
        ],
        [
          444,
          323,
        ],
      ],
      "headArrowPoint": [
        439,
        336,
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 507,
        "y": 239,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            511,
            256,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          536,
          186,
        ],
        [
          509,
          229,
        ],
        [
          475,
          281,
        ],
        [
          446,
          325,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          914,
          642,
        ],
        [
          911,
          652,
        ],
        [
          907,
          642,
        ],
      ],
      "headArrowPoint": [
        911,
        655,
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 917,
        "y": 574,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            921,
            591,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          911,
          534,
        ],
        [
          911,
          569,
        ],
        [
          911,
          607,
        ],
        [
          911,
          642,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "tailArrow": [
        [
          911,
          534,
        ],
        [
          915,
          528,
        ],
        [
          911,
          522,
        ],
        [
          907,
          528,
        ],
      ],
      "tailArrowPoint": [
        911,
        520,
      ],
      "target": "amazon",
    },
  ],
  "height": 839,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 289,
      "id": "cloud",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#bfdbfeb3",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            8,
            15,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        176,
        272,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 939,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 186,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            125,
            100,
          ],
          "text": "Frontend",
          "width": 81,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        215,
        335,
      ],
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Frontend",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 186,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            127,
            100,
          ],
          "text": "Backend",
          "width": 78,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        745,
        335,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 186,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            124,
            100,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 186,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            88,
            80,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            48,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            99,
            121,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 186,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            129,
            88,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            81,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        745,
        654,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 331,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1123,
}
`;

exports[`dotLayout: > computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          314,
          307,
        ],
        [
          317,
          317,
        ],
        [
          308,
          311,
        ],
      ],
      "headArrowPoint": [
        318,
        319,
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 286,
        "y": 239,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            290,
            256,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          227,
          185,
        ],
        [
          254,
          224,
        ],
        [
          284,
          269,
        ],
        [
          311,
          309,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          453,
          311,
        ],
        [
          444,
          317,
        ],
        [
          447,
          307,
        ],
      ],
      "headArrowPoint": [
        443,
        319,
      ],
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 500,
        "y": 239,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            504,
            256,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          534,
          185,
        ],
        [
          507,
          224,
        ],
        [
          477,
          269,
        ],
        [
          450,
          309,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          384,
          625,
        ],
        [
          381,
          635,
        ],
        [
          377,
          625,
        ],
      ],
      "headArrowPoint": [
        381,
        638,
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 387,
        "y": 558,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            391,
            575,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          381,
          518,
        ],
        [
          381,
          552,
        ],
        [
          381,
          591,
        ],
        [
          381,
          625,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "tailArrow": [
        [
          381,
          518,
        ],
        [
          385,
          512,
        ],
        [
          381,
          506,
        ],
        [
          377,
          512,
        ],
      ],
      "tailArrowPoint": [
        381,
        504,
      ],
      "target": "amazon",
    },
  ],
  "height": 823,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 186,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            124,
            100,
          ],
          "text": "customer",
          "width": 83,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 186,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            142,
            99,
          ],
          "text": "cloud",
          "width": 48,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        215,
        319,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 186,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            88,
            80,
          ],
          "text": "Support Engineer",
          "width": 156,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            48,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 235,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            99,
            121,
          ],
          "text": "supporting customers",
          "width": 134,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "person",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 331,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 186,
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            129,
            89,
          ],
          "text": "Amazon",
          "width": 74,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            81,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 169,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        215,
        637,
      ],
      "shape": "rectangle",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 331,
    },
  ],
  "tags": null,
  "title": "",
  "width": 761,
}
`;
